Add basic pagination (next & previous link)

--- a/src/files/templates/index.html
+++ b/src/files/templates/index.html
@@ -35,7 +35,17 @@
 				</tbody>
 			</table>
 			<nav id="page" aria-label="Files pagination" style="display:none;">
-				<ul class="nagination justify-content-end">
+				<ul class="pagination justify-content-end">
+					<li class="page-item">
+						<a class="page-link" data-role="paginate-previous" href>
+							Previous
+						</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link" data-role="paginate-next" href>
+							Next
+						</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
