--- a/src/files/templates/index.html
+++ b/src/files/templates/index.html
@@ -19,6 +19,26 @@
 	<main role="main" class="col-md-9 ml-sm-auto col-lg-10 mt-5 px-4">
 		<!-- LISTING -->
 		<h2>Files</h2>
+
+		<form name="ajax">
+		<!-- Filter -->
+		<div class="form-check form-check-inline">
+			<input class="form-check-input" type="radio" id="filter_all"
+				name="filter" value="all" checked >
+			<label class="form-check-label" for="filter_all">All</label>
+		</div>
+		<div class="form-check form-check-inline">
+			<input class="form-check-input" type="radio" id="filter_image"
+				name="filter" value="image">
+			<label class="form-check-label" for="filter_image">Image</label>
+		</div>
+		<div class="form-check form-check-inline">
+			<input class="form-check-input" type="radio" id="filter_csv"
+				name="filter" value="csv">
+			<label class="form-check-label" for="filter_csv">CSV</label>
+		</div>
+		</form>
+
 		<div class="table-responsive">
 			<table id="content" class="table table-striped table-sm">
 				<thead>
