--- a/src/files/templates/index.html
+++ b/src/files/templates/index.html
@@ -71,20 +71,19 @@
 		</div>
 
 		<!-- FORM -->
-		<!-- TODO
-		<form>
+		<form name="send">
 		<h2>Add more</h2>
 		<div class="form-group">
 			<label for="fileName">Label:</label>
-			<input type="text" class="form-control" id="fileName">
+			<input type="text" class="form-control" id="fileName" name="name">
 		</div>
 		<div class="form-group">
 			<label for="fileContent">File:</label>
-			<input type="file" class="form-control-file" id="fileContent">
+			<input type="file" class="form-control-file" id="fileContent"
+				name="file">
 		</div>
 		<button type="submit" class="btn btn-primary">Save</button>
 		</form>
-		-->
 	</main>
 
 	<div class="modal" id="fileDetails" tabindex="-1" role="dialog"
