--- a/src/files/templates/index.html
+++ b/src/files/templates/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" crossorigin="anonymous"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO">
-    <title>Hello, world!</title>
+    <title>File Viewer</title>
 </head>
 <body>
 
